# pump-research-framework

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  README.md  pyproject.toml
.github/workflows/: ci.yml
case_studies/: 01_memecoin_viral.md  02_l1_infra.md  03_airdrop_launch.md  04_ai_narrative.md  05_failures.md  README.md  patterns.md
docs/: data_sources.md  how_to_use.md
examples/: cases_example.csv  score_a_token.py  scorecard_example.json  scorecard_example.yaml  walkthrough.ipynb
framework/: 01_narrative.md  02_social.md  03_onchain.md  04_catalyst.md  README.md  lifecycle.md  limitations.md  strategies.md
playbook/: README.md  entry_exit.md  position_sizing.md  risk_management.md  scorecard_template.md
src/pumpscore/: __init__.py  backtest.py  checklist.py  cli.py  compare.py  explain.py  export.py  io.py  lifecycle.py  model.py  narrative.py  report.py  score.py  sensitivity.py  sizing.py
tests/: test_backtest.py  test_checklist.py  test_cli.py  test_compare.py  test_explain.py  test_export.py  test_io.py  test_lifecycle.py  test_narrative.py  test_report.py  test_score.py  test_sensitivity.py  test_sizing.py
tests/fixtures/: coingecko_categories.json  defillama_categories.json
